Release History
***************


1.0a4 (??)
----------
- using decorators got setting user

1.0a3 (??)
----------
- now using entrypoints for fabfiles

1.0a2 (2010-05-27)
------------------
- plugins can now call commands in other plugins
- use buildout-user and buildout-group to increase security of hosted code
- added setowners command to reset permissions
- added setaccess command to setup passwordless access
- moved hostout.ubuntu and hostout.supervisor to seperate plugins
- introduced initcommand to set user to particular plugin
- identify-file default to hostname_key so unique to host
- usign sdist zips instead of eggs to make cross platform
- python2.6 compatibility fixes

1.0a1 (2010-02-14)
------------------
- switched to python2.6 and fabric0.9


0.9.4 (2009-01-31)
------------------
- commandline changed to allow multsite and arguments
- mr.developer plugin
- supervisor plugin
- documentation clearer and more details
- ssh tests now working
- Nice listing of available commands

0.9.3
-----
- Fixed how extends works
- fabric commands have hostout in environment rather than argument
- new command to reset permissions
- fab_hosts etc is set for all commands
- supervisor recipe now uses fabfile

0.9.2 (2009-09-26)
------------------
- can extend from recipe directly instead of a buildout part
- supervisor plugin recipe
- fixed version pinning for recipes


0.9.1 (2009-09-17)
------------------
- fix bug in lowering case of package names in versions


0.9 (2009-09-15)
----------------
- new commandline to allow deploying to multiple hosts at once
- ability to take defaults from another part using 'extends' option
- fabfiles option to create your own hostout commands
- moved hostout cfg generation to deployment time
- egg releases hash of contents as version numbers and won't be built or uploaded unless changed
- new parts option to only install specified parts
- many option names simplified (backwards compatibility maintained)